--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "bun --watch src/index.ts"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@types/bun": "latest"
   },
   "peerDependencies": {
