--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD Docker
+name: CI/CD Docker Kubernetes
 
 on:
   push:
@@ -11,49 +11,59 @@ env:
 
 jobs:
   build:
-    name: Build
+    name: Build & Push Docker Image
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up docker buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Cache docker layers
+      - uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Cache Docker layers
         uses: actions/cache@v4
         with:
           path: /tmp/.buildx-cache
           key: ${{ runner.os }}-buildx-${{ env.VERSION }}
-          restore-keys: ${{ runner.os }}-buildx-
-      - name: Login to ghcr
-        uses: docker/login-action@v3.0.0
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_TOKEN }}
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
+
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v5
         with:
-          builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: ${{ env.DOCKER_IMAGE }}:latest
+          tags: |
+            ${{ env.DOCKER_IMAGE }}:latest
+            ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}
           build-args: |
             NOTION_API_KEY=${{ secrets.NOTION_API_KEY }}
 
   deploy:
     needs: build
-    name: Deploy
-    runs-on: [ self-hosted, label-go ]
+    name: Deploy to Kubernetes
+    runs-on: ubuntu-latest
     steps:
-      - name: Login to ghcr
-        uses: docker/login-action@v3.0.0
+      - uses: actions/checkout@v4
+
+      - name: Set up Kubectl
+        uses: azure/setup-kubectl@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GHCR_TOKEN }}
-      - name: Docker run
+          version: 'latest'
+
+      - name: Configure Kubernetes context
+        uses: azure/k8s-set-context@v3
+        with:
+          kubeconfig: ${{ secrets.KUBE_CONFIG }}
+
+      - name: Deploy to Kubernetes
         run: |
-          docker stop ${{ env.NAME }} && docker rm ${{ env.NAME }} && docker rmi ${{ env.DOCKER_IMAGE }}:latest
-          docker run -d -p 3002:3002 --name ${{ github.repository_id }} --restart always \
-            -e NOTION_API_KEY=${{ secrets.NOTION_API_KEY }} \
-            ${{ env.DOCKER_IMAGE }}:latest
+          kubectl set image deployment/${{ env.NAME }} ${{ env.NAME }}=${{ env.DOCKER_IMAGE }}:${{ env.VERSION }} --namespace=default --record || \
+          kubectl create deployment ${{ env.NAME }} --image=${{ env.DOCKER_IMAGE }}:${{ env.VERSION }} --namespace=default
+
+          kubectl expose deployment ${{ env.NAME }} --port=3001 --target-port=3000 --type=ClusterIP --namespace=default --dry-run=client -o yaml | kubectl apply -f -
