--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,16 @@ jobs:
           build-args: |
             NOTION_API_KEY=${{ secrets.NOTION_API_KEY }}
 
+      - name: Create Kubernetes Secret
+        uses: azure/k8s-create-secret@v1
+        with:
+          container-registry-url: ghcr.io
+          container-registry-username: ${{ github.repository_owner }}
+          container-registry-password: ${{ secrets.GHCR_TOKEN }}
+          secret-name: ghcr-secret
+          namespace: default
+          kubeconfig: ${{ secrets.KUBE_CONFIG }}
+
   deploy:
     needs: build
     name: Deploy to Kubernetes
@@ -79,6 +89,8 @@ jobs:
                 labels:
                   app: app-${{ env.NAME }}
               spec:
+                imagePullSecrets:
+                - name: ghcr-secret
                 containers:
                 - name: app-${{ env.NAME }}
                   image: ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}
