ci: update GitHub Actions workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,15 +61,18 @@ jobs:
         with:
           kubeconfig: ${{ secrets.KUBE_CONFIG }}
 
-      - name: Create Docker Registry Secret
+      - name: Update Docker Registry Secret
         run: |
+          if kubectl get secret ghcr-secret -n default > /dev/null 2>&1; then
+            kubectl delete secret ghcr-secret -n default
+          fi
+          
           kubectl create secret docker-registry ghcr-secret \
             --docker-server=ghcr.io \
             --docker-username=${{ github.repository_owner }} \
             --docker-password=${{ secrets.GHCR_TOKEN }} \
             --docker-email=${{ github.repository_owner }}@users.noreply.github.com \
-            --namespace=default \
-            --dry-run=client -o yaml | kubectl apply -f -
+            --namespace=default
 
       - name: Deploy to Kubernetes
         run: |
