--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,7 +112,7 @@ jobs:
             name: app-${{ env.NAME }}
             namespace: default
           spec:
-            type: ClusterIP
+            type: LoadBalancer
             ports:
             - port: 3001
               targetPort: 3000
