--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD Docker Kubernetes
+name: CI/CD Docker
 
 on:
   push:
@@ -11,112 +11,51 @@ env:
 
 jobs:
   build:
-    name: Build & Push Docker Image
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up Docker Buildx
+        id: buildx
         uses: docker/setup-buildx-action@v3
-
       - name: Cache Docker layers
         uses: actions/cache@v4
         with:
           path: /tmp/.buildx-cache
           key: ${{ runner.os }}-buildx-${{ env.VERSION }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-
-      - name: Log in to GitHub Container Registry
+          restore-keys: ${{ runner.os }}-buildx-
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_TOKEN }}
-
       - name: Build and Push Docker Image
+        id: docker_build
         uses: docker/build-push-action@v5
         with:
+          builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: |
-            ${{ env.DOCKER_IMAGE }}:latest
-            ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}
+          tags: ${{ env.DOCKER_IMAGE }}:latest
           build-args: |
             NOTION_API_KEY=${{ secrets.NOTION_API_KEY }}
 
   deploy:
     needs: build
-    name: Deploy to Kubernetes
-    runs-on: [self-hosted]
+    name: Deploy
+    runs-on: [ self-hosted, label-go ]
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Kubectl
-        uses: azure/setup-kubectl@v3
+      - name: Login to GHCR
+        uses: docker/login-action@v3
         with:
-          version: 'latest'
-
-      - name: Configure Kubernetes context
-        uses: azure/k8s-set-context@v3
-        with:
-          kubeconfig: ${{ secrets.KUBE_CONFIG }}
-
-      - name: Update Docker Registry Secret
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_TOKEN }}
+      - name: Docker Run
         run: |
-          kubectl delete secret ghcr-secret -n default --ignore-not-found
-          
-          DOCKER_SERVER="ghcr.io"
-          DOCKER_USERNAME="${{ github.repository_owner }}"
-          DOCKER_PASSWORD="${{ secrets.GHCR_TOKEN }}"
-          DOCKER_EMAIL="${{ github.repository_owner }}@users.noreply.github.com"
-          
-          kubectl create secret docker-registry ghcr-secret \
-            --docker-server="$DOCKER_SERVER" \
-            --docker-username="$DOCKER_USERNAME" \
-            --docker-password="$DOCKER_PASSWORD" \
-            --docker-email="$DOCKER_EMAIL" \
-            --namespace=default
-
-      - name: Deploy to Kubernetes
-        run: |
-          cat <<EOF | kubectl apply -f -
-          apiVersion: apps/v1
-          kind: Deployment
-          metadata:
-            name: app-${{ env.NAME }}
-            namespace: default
-          spec:
-            replicas: 1
-            selector:
-              matchLabels:
-                app: app-${{ env.NAME }}
-            template:
-              metadata:
-                labels:
-                  app: app-${{ env.NAME }}
-              spec:
-                imagePullSecrets:
-                - name: ghcr-secret
-                containers:
-                - name: app-${{ env.NAME }}
-                  image: ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}
-                  ports:
-                  - containerPort: 3000
-                  env:
-                  - name: NOTION_API_KEY
-                    value: "${{ secrets.NOTION_API_KEY }}"
-          ---
-          apiVersion: v1
-          kind: Service
-          metadata:
-            name: app-${{ env.NAME }}
-            namespace: default
-          spec:
-            type: NodePort
-            ports:
-            - port: 3000
-              targetPort: 3000
-              nodePort: 30001
-            selector:
-              app: app-${{ env.NAME }}
-          EOF
+          docker stop ${{ env.NAME }} || true
+          docker rm ${{ env.NAME }} || true
+          docker rmi ${{ env.DOCKER_IMAGE }}:latest || true
+          docker run -d -p 3001:3000 --name ${{ env.NAME }} --restart always \
+            -e NOTION_API_KEY=${{ secrets.NOTION_API_KEY }} \
+            ${{ env.DOCKER_IMAGE }}:latest
